--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,26 +1,50 @@
 
-body {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #2e2f42;
-  background-color: #f0f0f0;
+* {
+  box-sizing: border-box;
+}
+
+body,
+button,
+dd,
+div,
+dl,
+dt,
+figure,
+li,
+ul {
   margin: 0;
   padding: 0;
 }
 
+button {
+  all: unset;
+}
+
+body {
+  padding-block: 48px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+
+search {
+  margin: 0 auto;
+  width: fit-content;
+}
 
 form {
   display: flex;
-  flex-direction: column;
   gap: 8px;
-  align-items: center;
-  padding: 20px;
 }
 
 form input {
+  font-family: inherit;
+  line-height: 1.5;
+  font-size: 16px;
+  color: #2e2f42;
+}
+
+form input {
+  display: block;
   border-radius: 4px;
   border: 1px solid #808080;
   width: 272px;
@@ -39,14 +63,13 @@ form input:focus {
 }
 
 form button {
+  display: block;
   border-radius: 8px;
   padding: 8px 16px;
   font-weight: 500;
   color: #fff;
   background-color: #4e75ff;
   cursor: pointer;
-  border: none;
-  transition: background-color 200ms ease;
 }
 
 form button:hover {
@@ -59,12 +82,17 @@ form button:disabled {
   cursor: default;
 }
 
-::placeholder {
-  font-family: "Montserrat", sans-serif;
-  color: #2e2f42;
-  font-size: 16px;
+/* #endregion */
+
+/* #region GALLERY */
+img {
+  display: block;
+  max-width: 100%;
 }
 
+ul {
+  list-style: none;
+}
 
 .gallery {
   display: flex;
@@ -73,53 +101,88 @@ form button:disabled {
   margin-inline: auto;
   width: 1440px;
   padding: 24px 156px;
-  justify-content: center;
 }
-
 
 .gallery-item {
-  width: calc((100% - 48px) / 3);
-  border: 1px solid #e0e0e0;
-  border-radius: 4px;
-  overflow: hidden;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-  transition: transform 0.2s ease;
-}
-
-.gallery-item:hover {
-  transform: scale(1.02);
-}
-
-
-.gallery-image {
-  width: 100%;
+  width: calc((100% - 24px * 2) / 3);
   height: 200px;
-  object-fit: cover;
-  display: block;
-  cursor: zoom-in;
 }
 
+.thumb-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  border: 1px solid #808080;
+}
 
-.info {
+.thumb-image {
+  width: 100%;
+  height: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  object-position: center;
+  transition: transform 250ms linear;
+}
+
+.thumb-data {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding-block: 4px;
+  background-color: #fff;
+}
+
+.thumb-data-list {
   display: flex;
   justify-content: space-around;
-  align-items: center;
-  padding: 12px;
-  background-color: #f8f8f8;
-    font-size: 14px;
-    color: #2e2f42;
+  font-size: 12px;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.thumb-data-title {
+  display: block;
+  line-height: 1.33;
+  font-weight: 600;
+  text-align: center;
+}
+
+.thumb-data-data {
+  display: block;
+  line-height: 2;
+  text-align: center;
+}
+
+.loader-box {
+  margin-block: 48px;
+  text-align: center;
+}
+
+.loader {
+  box-sizing: border-box;
+  display: inline-block;
+  border-radius: 50%;
+  border: 5px solid #66b2ff;
+  border-bottom-color: transparent;
+  width: 48px;
+  height: 48px;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
   }
-  
-  .info-item {
-    margin: 0;
-    font-weight: 500;
+
+  100% {
+    transform: rotate(360deg);
   }
-  
-  
-  .sl-wrapper {
-    background: rgba(46, 47, 66, 0.8);
-  }
+}
+
+.hidden {
+  display: none;
+}
   
  
   @media screen and (max-width: 1024px) {
