--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -26,24 +26,21 @@ body {
 }
 
 
-search {
+.search-box {
   margin: 0 auto;
   width: fit-content;
 }
 
-form {
+.form {
   display: flex;
   gap: 8px;
 }
 
-form input {
+.form-input {
   font-family: inherit;
   line-height: 1.5;
   font-size: 16px;
   color: #2e2f42;
-}
-
-form input {
   display: block;
   border-radius: 4px;
   border: 1px solid #808080;
@@ -53,11 +50,11 @@ form input {
   transition: border-color 200ms linear;
 }
 
-form input:hover {
+.form-input:hover {
   border-color: #000000;
 }
 
-form input:focus {
+.form-input:focus {
   border-color: #4e75ff;
   outline: none;
 }
